welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:29: error: not found: value T
  for(i <- 0 to T.length-1){
                ^Array1:31: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
    setCouleurBrosse()=T(i)
    ^Array1:31: error: not found: value T
    setCouleurBrosse()=T(i)
                       ^